Type of output can be specified in MakeProfiles
MakeProfiles builds the profiles internally as a float array. Until now it
would also save the final output image in the same type unless the
background image had a different type. With the added capabilities to
specify the flat profile's pixel values, it is now necessary for the output
to have a certain data type (based on the flat values you wanted), for
example when making labels to be used in MakeCatalog, all the pixels have
integer values, and MakeCatalog also expects an integer type (int, short,
or long) for the labeled image.

With this commit, there is a new `--type' (`-T') option which allows the
user to set the output file type. Its values are given as a string of
standard types for easy typing on the commandline or in the configuration
files.

Given the separation of user-interface functions (like this) from the main
processing functions, implementing this new option is conceptually easy:
mainly to do with the `args.h' and `ui.c' files. The value given by the
user is immediately checked against the acceptable values and saved in the
`uiparams' structure as a CFITSIO BITPIX keyword value. If necessary it is
later copied to the `p->bitpix' variable which determines the type of the
output. With this more generic solution, the procedure to write the
function in the `write' function of `mkprof.c' also got much more simpler.

MakeProfile's `inputascanvas' test was also modified to save its value as a
long type to test this option.

Two other minor issues are corrected with this commit:

  - The replace option was only read from the command-line, not the
    configuration files.

  - When printing the value of the `--mforflatpix' option, it would
    mistakenly print the value to `--tcol'.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -12436,6 +12436,20 @@ option is ignored.
 second FITS axis (vertical when viewed in SAO ds9), see the
 explanation for @option{--naxis1}.
 
+@item -T
+@itemx --type
+(@option{=STR}) Type of the output image pixels (specified by @code{BITPIX}
+in the FITS standard). It can have any one of the following values:
+@option{byte}, @option{short}, @option{long}, @option{longlong},
+@option{float}, @option{double}. Internally, the images are made in the
+float type, but upon writing of the single output (not individual
+profiles), the image will be converted to the type specified by this
+option.
+
+When a background image is given without the @option{--inputascanvas}
+option, it is assumed that you want the output in the same format as the
+background, therefore the value to this option is ignored.
+
 @item -C
 @itemx --inputascanvas
 When an image is given as an argument, use the input image as the canvas to
@@ -12443,10 +12457,11 @@ make all the mock profiles. In practice, this option only changes the
 non-blank pixels (see @ref{Blank pixels}) of the input image (in memory
 after reading, not the actual input file) to zero before making the
 profiles. The profiles are then built on those cleared pixels. With this
-option (like when building on a background image) none of the
-`@option{--naxis1}', `@option{--naxis2}', `@option{--crpix1}',
-`@option{--crpix2}', `@option{--crval1}', `@option{--crval2}', and
-`@option{--resolution}' are necessary.
+option (like when building on a background image) the values to
+@option{--naxis1}, @option{--naxis2}, @option{--crpix1}, @option{--crpix2},
+@option{--crval1}, @option{--crval2}, and @option{--resolution} are
+ignored. However, if @option{--type} is given, its value will take
+precedence over the background image type.
 
 This option can be very useful when the mock image is to be made over a
 real sky region and compared to a real image (that might have blank
