Magnitude error column in MakeCatalog
A new column is now added to MakeCatalog for estimating the magnitude error
(called with the `--magnitudeerr' or `-e' option). This was done as part of
the work for task #14124. That task is not complete with this commit,
because we will also need to work on ways to incorporate correlated noise
and aperture error into this error too (and the S/N calculation in
general). The sky-region pseudo-detections and clumps can be very good
reference to make those estimations (maybe as a correction factor).

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -11564,7 +11564,20 @@ with no threshold!
 
 @item -m
 @itemx --magnitude
-The magnitude of all clumps or objects, see @option{--brightness}.
+The magnitude of clumps or objects, see @option{--brightness}.
+
+@item -e
+@itemx --magnitudeerr
+The magnitude error of clumps or objects. The magnitude error is calculated
+from the signal-to-noise ratio (see @option{--sn}, abbreviated as
+@mymath{S}): @mymath{\Delta{M}=2.5/(S\times\ln{10})}. Note that until now
+this error assumes un-correlated pixel values and also does not include the
+error in estimating the aperture (or error in generating the labeled
+image).
+
+For now these factors have to be found by other means.
+@url{https://savannah.gnu.org/task/index.php?14124, Task 14124} has been
+defined for work on adding these sources of error too.
 
 @item --clumpsmagnitude
 [Objects] The magnitude of all clumps in this object, see
